test/corpus/fail/issue-3585a.mo
=========
issue-3585a.mo
=========

import R = "issue-3585/Record";

actor {
}

---

(source_file
  (import
    (var_pat
      (identifier))
    (text_literal))
  (obj_dec
    (obj_sort)
    (obj_body)))
